--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
 	"description": "Node.js lib for iRacing data api",
 	"type": "module",
 	"scripts": {
-		"api": "node --env-file=./.env index.js",
+		"api": "tsx --env-file=./.env index.ts",
 		"check": "biome check --write",
-		"login": "node --env-file=./.env login.js"
+		"login": "tsx --env-file=./.env login.ts",
+		"mcp": "tsx --env-file=./.env mcp-server.ts"
 	},
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"@types/cors": "^2.8.18",
+		"@types/express": "^5.0.1",
+		"cors": "^2.8.5",
+		"express": "^5.1.0",
 		"tough-cookie": "4.1.3"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4"
+		"@biomejs/biome": "1.9.4",
+		"@types/tough-cookie": "4.0.5",
+		"tsc": "2.0.4",
+		"tsx": "4.19.4",
+		"typescript": "5.8.3"
 	}
 }
