--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
 	"scripts": {
 		"api": "tsx --env-file=./.env index.ts",
 		"check": "biome check --write",
-		"login": "tsx --env-file=./.env perform-login.ts",
-		"mcp": "tsx --env-file=./.env mcp-server.ts"
+		"login": "tsx --env-file=./.env perform-login.ts"
+	},
+	"bin": {
+		"iracing": "index.js"
 	},
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"@types/cors": "^2.8.18",
-		"@types/express": "^5.0.1",
-		"cors": "^2.8.5",
-		"express": "^5.1.0",
 		"tough-cookie": "4.1.3"
 	},
 	"devDependencies": {
