--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
 	"name": "iracing-data-cli",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "Node.js cli for iRacing data api",
-	"files": ["dist"],
+	"files": [
+		"dist"
+	],
 	"main": "dist/index.js",
 	"bin": {
 		"iracing-data-cli": "dist/index.js"
